--- a/package.json
+++ b/package.json
@@ -2,5 +2,31 @@
   "dependencies": {
     "axios": "^1.6.1",
     "https": "^1.0.0"
-  }
+  },
+  "name": "canarylabs-web-api",
+  "description": "Unofficial NodeJS package for the Canary Axiom Web API",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wilburforce83/canarylabs-web-api.git"
+  },
+  "keywords": [
+    "canarylabs",
+    "axiom",
+    "axiom",
+    "api",
+    "web",
+    "api"
+  ],
+  "author": "Will Shearer",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/wilburforce83/canarylabs-web-api/issues"
+  },
+  "homepage": "https://github.com/wilburforce83/canarylabs-web-api#readme"
 }
