--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
     "axios": "^1.6.1",
+    "dotenv": "^16.3.1",
     "https": "^1.0.0"
   },
   "name": "canarylabs-web-api",
   "description": "Unofficial NodeJS package for the Canary Axiom Web API",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
